@@ -1,3 +1,9 @@
+2006-04-19  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_copy):
+	- Fix the copy function. (#338826, Søren Sandmann)
+
 2006-04-10  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_style.c:
